# testgit

./: .docker-compose.yml.swp  .env  .pdm-python  :  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  kafka-config.yaml  metrics.properties  prometheus.yml  pyproject.toml  requirements.txt
airflow-celery/: README.md
app/: pyspark_test.py
db-init/: init.sql
db/initdb.d/: create_table.sql  init.sql
kafka-data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
kafka-data/__consumer_offsets-13/: partition.metadata
kafka-data/tickets-0/: partition.metadata
spark-dash/: README.md  pyproject.toml
spark-dash/src/spark_dash/: main.py  utils.py
spark-dash/src/spark_dash/pages/: scale_log.py
src/semi_final/: con.py  db.py  pro.py
